--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>CryptoRight (KAI)</title>
+  <title>CryptoRight</title>
   <!-- Let browser know website is optimized for mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <!-- Compiled and minified Materialize CSS -->
@@ -16,7 +16,7 @@
 
   <div class="container">
 
-    <h4>CryptoRight Blockchain Copyright System</h4>
+    <h4>CryptoRight Blockchain Copyright System KAI</h4>
     <p>Welcome to the CryptoRight portal! Using this interface, you can explore and create new proprietary copyrights and open source material, all stored permanently on Ethereum and IPFS.</p>
 
     <hr />
