--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
 
   <div class="container">
 
-    <h4>CryptoRight Blockchain Copyright System KAI</h4>
+    <h4>CryptoRight Blockchain Copyright System KAI :-)</h4>
     <p>Welcome to the CryptoRight portal! Using this interface, you can explore and create new proprietary copyrights and open source material, all stored permanently on Ethereum and IPFS.</p>
 
     <hr />
